# madgraph-auto

./: .travis.yml  Fortran.hs  Machine.hs  Mathematica.hs  Model.hs  Run.hs  SetupType.hs  SimpleQQ.hs  UserCut.hs  Util.hs  Work.hs  build.conf  builddep.sh  compilemadgraph.sh  default.nix  madgraph-auto.cabal  madgraph20110110_SingleWpGen.hs  madgraph20110112_SextetTeVa.hs  madgraph20110113_SMEventgen2.hs  madgraph20110114_SMEventgen4.hs  madgraph20110117_WpTTBarMLMTeVKCut.hs  madgraph20110118_WpTTBarMLMTeVKCut.hs  madgraph20110126_benchmark.hs  madgraph20110128_benchmark2.hs  madgraph20110130_millions.hs  madgraph20110205_benchmark.hs  madgraph20110206_benchmark.hs  madgraph20110207_benchmark.hs  madgraph20110208_benchmark.hs  madgraph20110215.hs  madgraph20110216.hs  madgraph20110217.hs  madgraph20110218.hs  madgraph20110221.hs  madgraph_auto.cabal  math201110209.hs  mathRun.hs  mathRun20110214.hs  parse_html_table.hs  shell.nix  (+2 more)
fsrc/: compile.sh  compile_hepevt2stdhep.sh  hep2lhe.f  hepevt2stdhep.f  stdhep_print.f
script/: madgraph20110110SMEventgen.hs  madgraph20110113_SMEventgen3.hs  madgraph20110114_SextetTeVaFixCoup.hs  madgraph20110115_TripletTeVaFixCoup.hs  madgraph20110118_SextetLHC.hs  madgraph20110119_WpTTBarMLMTeVKCut_FullDecay.hs  madgraph20110119_WpTTBarMLMTeVKCut_largecoup.hs  madgraph20110121_SextetLHC.hs  madgraph20110126_benchmark.hs  madgraph20110127_doubleprod.hs  madgraph20110128_benchmark2.hs  madgraph20110129_fulldecay.hs  madgraph20110207_benchmark.hs  madgraph20110217.hs  madgraph20110218.hs
src/: Cluster.hs  Machine.hs  Mathematica.hs  Util.hs
src/HEP/Automation/MadGraph/: Card.hs  Cluster.hs  JSON.hs  Log.hs  Machine.hs  Mathematica.hs  Model.hs  Run.hs  SetupType.hs  Type.hs  UserCut.hs  Util.hs
src/HEP/Automation/MadGraph/Machine/: V1.hs  V2.hs
src/HEP/Automation/MadGraph/SetupType/: V1.hs  V2.hs
src/HEP/Automation/MadGraph/Util/: V1.hs  V2.hs
src/HEP/Automation/MadGraph/trash/: Cluster.hs
template/: Chameleon1_02.m  compile.sh  hep2lhe.f.st  hepevt2stdhep.f  me5_configuration.txt  me5_configuration.txt.st  param_card_axigluon.dat.st  pgs.inc  pythia_card_default.dat.st  run_card_DefCut_MLM.dat.st  run_card_KCut_MLM.dat.st  run_card_NoCut_NoMatch.dat.st  tev_top_reco_IW.pbs.st  tev_top_reco_IW_package.m.st
test/: madgraphRun.hs  mathRun.hs
