Name:		madgraph-auto
Version:	0.6.4
Synopsis:	automated program library for madgraph run
Description: 	automated program library for madgraph run  
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.2


Library
  hs-source-dirs: src
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4, process, unix, directory, mtl>2, HStringTemplate > 0.6, 
                 HStringTemplateHelpersIW, filepath, webdav-manager > 0.0.2, 
                 pureMD5, crypto-api, bytestring, LHE-sanitizer>=0.0.999, 
                 hslogger >= 1.1.4, transformers
  Exposed-Modules: 
                   HEP.Automation.MadGraph.Machine
                   HEP.Automation.MadGraph.Model
                   HEP.Automation.MadGraph.Run
                   HEP.Automation.MadGraph.SetupType
                   HEP.Automation.MadGraph.UserCut
                   HEP.Automation.MadGraph.Util
                   HEP.Automation.MadGraph.Log



		 
