Name:		madgraph-auto
Version:	0.6.999
Synopsis:	automated program library for madgraph run
Description: 	automated program library for madgraph run  
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.2
data-files: 
            template/*.dat.st
            template/*.dat


Library
  hs-source-dirs: src
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends:   base>4, 
                   process, 
                   unix, 
                   directory,
                   filepath,
                   mtl == 2.*, 
                   transformers,  
                   HStringTemplate > 0.6, 
                   HStringTemplateHelpersIW,
                   webdav-manager >= 0.1.1.0, 
                   bytestring, 
                   LHE-sanitizer>=0.0.999, 
                   hslogger >= 1.1.4 
                   -- evchain == 0.1.*
  Exposed-Modules: 
                   HEP.Automation.MadGraph.Machine
                   HEP.Automation.MadGraph.Model
                   HEP.Automation.MadGraph.Run
                   HEP.Automation.MadGraph.SetupType
                   HEP.Automation.MadGraph.UserCut
                   HEP.Automation.MadGraph.Util
                   HEP.Automation.MadGraph.Log
  Other-Modules: 
                   Paths_madgraph_auto
