Name:		madgraph-auto
Version:	0.999
Synopsis:	automated program library for madgraph run
Description: 	automated program library for madgraph run  
License: 	GPL-3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.2
data-files: 
            template/*.dat.st
            template/*.dat
            template/me5_configuration.txt.st

Library
  hs-source-dirs: src
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends:   base>4, 
                   process, 
                   unix, 
                   directory,
                   filepath,
                   mtl > 2,
                   aeson, 
                   text >= 0.11,
                   unordered-containers >= 0.2, 
                   transformers,  
                   HStringTemplate > 0.6, 
                   devadmin,
                   webdav-manager >= 0.999, 
                   bytestring, 
                   LHE-sanitizer>=0.999, 
                   hslogger >= 1.1.4, 
                   hashable >= 1.2 
  Exposed-Modules: 
                   HEP.Automation.MadGraph.Card
                   HEP.Automation.MadGraph.JSON
                   HEP.Automation.MadGraph.Log
                   HEP.Automation.MadGraph.Model
                   HEP.Automation.MadGraph.Run
                   HEP.Automation.MadGraph.SetupType
                   HEP.Automation.MadGraph.Type
                   HEP.Automation.MadGraph.Util
                   Paths_madgraph_auto
