Name:		madgraph_auto
Version:	0.3.0.0
Synopsis:	automated program library for madgraph run
Description: 	automated program library for madgraph run  
License: 	GPL-3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.2


Library
  hs-source-dirs: src
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4, ttbar>=0.0.2, LHAPDF-haskell, HEPUtil > 0.0.3, mersenne-random, array, 
                 HEPMonteCarlo >= 0.1, HROOT >= 0.2
  Exposed-Modules: 
                   Tester.XSecTester, 
                   Tester.XSecTester.Common, 
                   Tester.XSecTester.Parton, 
                   Tester.XSecTester.Proton
		 
